5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1103.log
== TEST (2019-04-28 18:11:44) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, b)
	elif(x > b or x > a):
		print(x,"nao pertence ao intervalo", a, b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:12:51) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif(x > b or x > a):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:13:08) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif(x > b or x > a):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.169662
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 e 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:24) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif(x > b or x > a):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:45) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif(x > b or x > a):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:14:38) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif(x > b and x > a):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:15:16) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:16:28) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and (a <= x) and (x <= b)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:17:12) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:17:26) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.213892
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:17:28) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:19:57) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b < a) or (a < x) and ( x > b)):
		print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:20:13) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b < a) or (a < x) and ( x > b)):
		print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.12312
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:16) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b < a) or (a < x) and ( x > b)):
		print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:20:35) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b < a) or (a < x) or ( x > b)):
		print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.158937
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:21:24) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif(b <= a):
		print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:21:38) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif(b <= a):
		print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:22:38) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:24:35) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:24:48) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:24:59) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.113705
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:25:02) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:25:48) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a, ",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a, ",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:26:48) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- OUTPUT:
Entradas 3.0 e 4.0 invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:27:31) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:27:41) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:28:12) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", "a,", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:28:48) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((x > a) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:33:07) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.157255
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:33:51) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
	
-- EXECUTION TIME:
0.191917
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:33:53) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) or ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
	
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:34:25) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
	
-- EXECUTION TIME:
0.260908
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:34:48) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a) and ((a <= x) and (x <= b))):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.133993
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 3.0 e 4.0 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:36:20) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.17481
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:36:23) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a) and (x >= 0)):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- ERROR:
File "XXXX", line 9
    print(x,"nao pertence ao intervalo", a",", b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:36:47) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a):
		print("Entradas", a, "e", b, "invalidas")
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.135188
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 10
    elif((b <= a):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:37:27) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
	elif((b <= a):
		print("Entradas", a, "e", b, "invalidas")

-- EXECUTION TIME:
0.207599
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 10
    elif((b <= a):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:37:39) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.189546
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:37:57) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.207193
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:00) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.164197
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:01) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.176613
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:01) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.103714
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:02) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.271086
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:02) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) and (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.248905
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:38:34) 
-- CODE:
x = float(input("valor de x: "))
a = float(input("valor de a: "))
b = float(input("valor de b: "))

if((b > a)):
	if((a <= x) and (x <= b)):
		print(x,"pertence ao intervalo", a,",", b)
	elif((a > x) or (x > b)):
		print(x,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")	

-- EXECUTION TIME:
0.207006
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
